Fixed link alignment on mobile. (#444)

--- a/website/src/css/index.scss
+++ b/website/src/css/index.scss
@@ -149,6 +149,8 @@ figure {
 }
 
 /* Move the URLs closer to the logos */
-.gov-image figcaption {
-  margin-top: -12px;
+@media (min-width: $desktop) {
+  .gov-image figcaption {
+    margin-top: -12px;
+  }
 }
